REGRESSION(r248533): Unable to use WTF::RefCounted when building in a debug configuration against a non-debug WebKit https://bugs.webkit.org/show_bug.cgi?id=201585 rdar://problem/55153369

Reviewed by Chris Dumez.

Export WTF::RefCountedBase::areThreadingChecksEnabledGlobally regardless of whether or not assertions
are enabled for the WTF being built. This allows WebKit-based projects to use RefCounted for their own
objects in a debug configuration without requiring a debug build of WebKit.

* wtf/RefCounted.cpp:
* wtf/RefCounted.h:


Canonical link: https://commits.webkit.org/215226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249628 268f45cc-cd09-0410-ab3c-d52691b4dbfc